# sweeper

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yaml
sweeper/: sweeper.py
tests/: test_sweeper.py
