[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sweeper"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
    { name = "moskomule", email = "moskomule@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://pypi.org/simple/"

[project.urls]
Documentation = "https://github.com/moskomule/sweeper"
Issues = "https://github.com/moskomule/sweeper/issues"
Source = "https://github.com/moskomule/sweeper"

[tool.hatch.version]
path = "sweeper/__about__.py"

[tool.hatch.envs.tests]
dependencies = [
    "pytest",
]

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/tests",
]

[project.scripts]
foo = "sweeper.sweeper:main"